# dash-pi

./: .gitignore  Cargo.toml  README.md  app.py  build_release.sh  bump_version.sh  install.sh  launcher.sh  requirements.txt  run.sh  sample.env  server.py  setup.sh  terminate.sh  uninstall.sh
camera/: Cargo.toml  README.md  build_release.ps1  build_release.sh  dash-pi.env.example
camera/src/: config.rs  main.rs  recorder.rs  server.rs
client/: package-lock.json  package.json
client/src/: app.d.ts  app.module.scss  app.tsx  index.css
client/src/Layouts/MainLayout/: MainLayout.d.ts  MainLayout.module.scss  MainLayout.tsx  index.ts
client/src/components/MediaItem/: MediaItem.module.scss  MediaItem.tsx  index.ts
client/src/components/Player/: Player.module.scss  Player.tsx
client/src/helpers/: index.d.ts  index.ts  queries.ts
client/src/interface/Input/: Input.d.ts  Input.module.scss  Input.tsx  index.ts
client/src/pages/ChangePassword/: ChangePassword.module.scss  ChangePassword.tsx
client/src/pages/Login/: Login.module.scss  Login.tsx
client/src/pages/Main/: Main.module.scss  Main.tsx  index.ts
client/src/pages/Profile/: Profile.module.scss  Profile.tsx
core/: camera.py  helpers.py  server.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: app.module.scss  app.tsx  index.css  main.tsx
dashboard/src/components/Alert/: Alert.module.scss  Alert.tsx
dashboard/src/components/MediaTile/: MediaTile.module.scss  (+2 more)
dashboard/src/helpers/: index.ts
dashboard/src/types/: global.d.ts
src/: config.rs  main.rs  recorder.rs
(+7 files in other folders)
