[package]
name = "dash-pi-rs"
version = "0.2.2"
edition = "2021"

[dependencies]
dotenv = "0.15"
chrono = "0.4"
ctrlc = "3.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }

